--- a/src/assets/scss/paper-kit/_images.scss
+++ b/src/assets/scss/paper-kit/_images.scss
@@ -2,6 +2,9 @@
     border-radius: $border-radius-extreme;
     transition: opacity 0.5s ease 0s;
     max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 .img-details{
     min-height: 50px;
@@ -43,6 +46,8 @@
 .images-title{
     margin-bottom: 20px;
     height: 50px;
+    text-align: center;
+    color: white;
 }
 .nav-link .profile-photo-small{
     width: 40px;
