--- a/src/assets/scss/paper-kit/_examples.scss
+++ b/src/assets/scss/paper-kit/_examples.scss
@@ -14,7 +14,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: image-set("logo1x.jpeg" 1x);
+    background-image: image-set("logo1x.jpeg" 1x, "logo2x.jpeg" 2x);
 
     .filter::after{
         background-color: rgba(0, 0, 0, 0.5);
